--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "web",
-  "version": "1.0.00",
+  "version": "1.0.01",
   "private": true,
   "scripts": {
     "dev": "next dev --webpack",
-    "build": "next build",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint"
   },
