--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@serwist/next": "^9.5.0",
     "@serwist/precaching": "^9.5.0",
+    "@supabase/auth-helpers-nextjs": "^0.15.0",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.1",
     "@tanstack/react-query": "^5.90.20",
     "class-variance-authority": "^0.7.1",
