--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hermandad San Benito",
+  "name": "Hermandad de la Soledad",
   "short_name": "Hermandad",
   "description": "Sistema de gestión integral para la hermandad",
   "start_url": "/",
