--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web",
-  "version": "1.0.78",
+  "version": "1.0.79",
   "private": true,
   "scripts": {
     "dev": "next dev --webpack",
@@ -14,6 +14,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@serwist/next": "^9.5.0",
     "@serwist/precaching": "^9.5.0",
