--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web",
-  "version": "1.1.01",
+  "version": "1.1.02",
   "private": true,
   "scripts": {
     "dev": "next dev --webpack",
@@ -16,6 +16,7 @@
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@serwist/next": "^9.5.0",
     "@serwist/precaching": "^9.5.0",
     "@supabase/auth-helpers-nextjs": "^0.15.0",
