--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web",
-  "version": "1.1.36",
+  "version": "1.1.38",
   "private": true,
   "scripts": {
     "dev": "next dev --webpack",
@@ -19,14 +19,18 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@serwist/next": "^9.5.0",
     "@serwist/precaching": "^9.5.0",
+    "@serwist/sw": "^9.5.3",
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.93.1",
+    "@tanstack/query-async-storage-persister": "^5.90.22",
     "@tanstack/react-query": "^5.90.20",
+    "@tanstack/react-query-persist-client": "^5.90.22",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "idb": "^8.0.3",
+    "idb-keyval": "^6.2.2",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
     "next-themes": "^0.4.6",
@@ -35,6 +39,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.3.6",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
