--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "web",
-  "version": "1.1.78",
+  "version": "1.1.79",
   "private": true,
   "scripts": {
     "dev": "next dev --webpack",
+    "dev:share": "concurrently \"npm run dev\" \"C:\\ngrok\\ngrok.exe http 127.0.0.1:3000\"",
     "build": "next build --webpack",
     "start": "next start",
     "lint": "eslint"
@@ -29,6 +30,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dexie": "^4.3.0",
     "idb": "^8.0.3",
     "idb-keyval": "^6.2.2",
     "lucide-react": "^0.563.0",
@@ -44,9 +46,11 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/dexie": "^1.3.32",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "concurrently": "^9.2.1",
     "eslint": "^9",
     "eslint-config-next": "16.1.4",
     "tailwindcss": "^4",
