--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.1.79",
   "private": true,
   "scripts": {
-    "dev": "next dev --webpack",
+    "dev": "next dev",
     "dev:share": "concurrently \"npm run dev\" \"C:\\ngrok\\ngrok.exe http 127.0.0.1:3000\"",
-    "build": "next build --webpack",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
@@ -34,7 +34,7 @@
     "idb": "^8.0.3",
     "idb-keyval": "^6.2.2",
     "lucide-react": "^0.563.0",
-    "next": "16.1.4",
+    "next": "15.1.6",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -52,7 +52,7 @@
     "@types/react-dom": "^19",
     "concurrently": "^9.2.1",
     "eslint": "^9",
-    "eslint-config-next": "16.1.4",
+    "eslint-config-next": "15.1.6",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
