--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "web",
-  "version": "1.1.84",
+  "name": "hermandad",
+  "version": "1.1.85",
   "private": true,
   "scripts": {
     "dev": "next dev",
