--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hermandad",
-  "version": "1.2.25",
+  "version": "1.2.27",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -36,6 +36,7 @@
     "lucide-react": "^0.563.0",
     "next": "^15.1.10",
     "next-themes": "^0.4.6",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "sonner": "^2.0.7",
